# sntp_client

./: Cargo.toml  README.md
src/: main.rs
