[package]
name = "sntp_client"
version = "1.2.0"
authors = ["Roland Ruckerbauer <roland.rucky@gmail.com>"]
description = "sntp client command line utility"
repository = "https://github.com/ruabmbua/sntp_client"
readme = "README.md"
keywords = ["sntp", "utility", "client", "commandline"]
license = "GPL-3.0+"

[dependencies]
byteorder = "0.5.1"
time = "0.1.35"
clap = { version = "2.2.5", features = ["unstable"] }
